--- a/Project/index.html
+++ b/Project/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html lang="">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-
-<body>
-    
-</body>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="" href="css/meyers-reset.css">
+		<link rel="stylesheet" href="css/style.css">
+		<title>Tasty&ampFancy</title>
+	</head>
+	<body>
+		<div id="header">
+			<a href="index.html">Logo</a>
+			<div>
+				<a href="meny.html">Meny</a>
+				<a href="index.html#nyheter">Nyheter</a>
+				<a href="index.html#tilbud">Tilbud</a>
+				<a href="index.html#kontakt">Kontakt oss</a>
+			</div>
+		</div>
+		<div id="banner">
+			
+		</div>
+		<div id="nyheter">
+			
+		</div>
+		<div id="tilbud">
+			
+		</div>
+		<div id="kontakt">
+			
+		</div>
+		<div id="footer">
+			
+		</div>
+	</body>
 </html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
