--- a/Project/index.html
+++ b/Project/index.html
@@ -30,7 +30,8 @@
 			
 		</div>
 		<div id="footer">
-			
+			<p>Telefon: XX XX XX XX</p>
+			<p>E-post: kontakt@tastyfancy.no</p>
 		</div>
 	</body>
 </html>
