--- a/Project/index.html
+++ b/Project/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="" href="css/meyers-reset.css">
+		<link rel="stylesheet" href="css/meyers-reset.css">
+        <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet"> 
 		<link rel="stylesheet" href="css/style.css">
 		<title>Tasty&ampFancy</title>
 	</head>
