--- a/Project/index.html
+++ b/Project/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<div id="header">
-			<a href="index.html">Logo</a>
+			<a href="index.html">Tasty&amp;Fancy</a>
 			<div>
 				<a href="meny.html">Meny</a>
 				<a href="index.html#nyheter">Nyheter</a>
@@ -19,15 +19,19 @@
 			</div>
 		</div>
 		<div id="banner">
+            <p>Fra fastfood til verdensklasse</p>
 			
 		</div>
 		<div id="nyheter">
+            <p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
 			
 		</div>
 		<div id="tilbud">
+            <p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
 			
 		</div>
 		<div id="kontakt">
+            <p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
 			
 		</div>
 		<div id="footer">
