--- a/Project/index.html
+++ b/Project/index.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/meyers-reset.css">
-        <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 		<title>Tasty&ampFancy</title>
 	</head>
 	<body>
 		<div id="header">
-			<a href="index.html">Tasty&amp;Fancy</a>
+			<a id="name" href="index.html">Tasty&amp;Fancy</a>
 			<div>
 				<a href="meny.html">Meny</a>
 				<a href="index.html#nyheter">Nyheter</a>
@@ -19,8 +19,8 @@
 			</div>
 		</div>
 		<div id="banner">
-            <p>Fra fastfood til verdensklasse</p>
-			
+			<img src="pictures/banner.png">
+			<p>Fra fastfood til verdensklasse</p>
 		</div>
 		<div id="nyheter">
             <p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
