--- a/Project/index.html
+++ b/Project/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/meyers-reset.css">
-        <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi+Maru">
 		<link rel="stylesheet" href="css/style.css">
-		<title>Tasty&ampFancy</title>
+		<title>Tasty&amp;Fancy</title>
 	</head>
 	<body>
 		<div id="header">
