Lots of changes
Fixed banner
Fixed header menu

--- a/Project/index.html
+++ b/Project/index.html
@@ -12,14 +12,14 @@
 		<div id="header">
 			<a id="name" href="index.html">Tasty&amp;Fancy</a>
 			<div>
-				<a href="meny.html">Meny</a>
-				<a href="index.html#nyheter">Nyheter</a>
-				<a href="index.html#tilbud">Tilbud</a>
-				<a href="index.html#kontakt">Kontakt oss</a>
+				<a class="header-button" href="meny.html">Meny</a>
+				<a class="header-button" href="index.html#nyheter">Nyheter</a>
+				<a class="header-button" href="index.html#tilbud">Tilbud</a>
+				<a class="header-button" href="index.html#kontakt">Kontakt oss</a>
 			</div>
 		</div>
 		<div id="banner">
-			<img src="pictures/banner.png">
+			<img src="pictures/pizza-banner.jpg">
 			<p>Fra fastfood til verdensklasse</p>
 		</div>
 		<div id="nyheter">
