Header and banner-stuff

--- a/Project/index.html
+++ b/Project/index.html
@@ -11,7 +11,12 @@
 	<body>
 		<div id="header">
 			<a id="name" href="index.html">Tasty&amp;Fancy</a>
-			<div>
+			<div id="hamburger">
+				<div id="hamburger-top"></div>
+				<div id="hamburger-middle"></div>
+				<div id="hamburger-bottom"></div>
+			</div>
+			<div id="menu">
 				<a class="header-button" href="meny.html">Meny</a>
 				<a class="header-button" href="index.html#nyheter">Nyheter</a>
 				<a class="header-button" href="index.html#tilbud">Tilbud</a>
