--- a/Project/index.html
+++ b/Project/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="header">
 			<a id="name" href="index.html">Tasty&amp;Fancy</a>
-			<div id="hamburger">
+			<div id="hamburger-button">
 				<div id="hamburger-top"></div>
 				<div id="hamburger-middle"></div>
 				<div id="hamburger-bottom"></div>
