--- a/Project/index.html
+++ b/Project/index.html
@@ -11,12 +11,16 @@
 	<body>
 		<div id="header">
 			<a id="name" href="index.html">Tasty&amp;Fancy</a>
-			<div id="hamburger-button">
+			<a id="hamburger-button"href="#hamburger-button">
 				<div id="hamburger-top"></div>
 				<div id="hamburger-middle"></div>
 				<div id="hamburger-bottom"></div>
-			</div>
-			<div id="menu">
+			</a>
+			<a id="x-button"href="#">
+				<div id="line-1"></div>
+				<div id="line-2"></div>
+			</a>
+			<div id="header-menu">
 				<a class="header-button" href="meny.html">Meny</a>
 				<a class="header-button" href="index.html#nyheter">Nyheter</a>
 				<a class="header-button" href="index.html#tilbud">Tilbud</a>
