Fixed more stuff
Fixed responsive banner text.
Changed font on banner text.
Animation on header-buttons when pressed.

--- a/Project/index.html
+++ b/Project/index.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/meyers-reset.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi+Maru">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton"> 
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kosugi+Maru|Passion+One">
 		<link rel="stylesheet" href="css/style.css">
 		<title>Tasty&amp;Fancy</title>
 	</head>
