Fixed margin on header

--- a/Project/index.html
+++ b/Project/index.html
@@ -16,7 +16,7 @@
 				<div id="hamburger-middle"></div>
 				<div id="hamburger-bottom"></div>
 			</a>
-			<a id="x-button"href="#">
+			<a id="x-button" href="">
 				<div id="line-1"></div>
 				<div id="line-2"></div>
 			</a>
