--- a/Project/meny.html
+++ b/Project/meny.html
@@ -8,7 +8,47 @@
 		<title>Tasty&ampFancy - Meny</title>
 	</head>
 	<body>
+        <div class ="grid-container">
+            <div class ="grid-item">1</div>
+            <div class ="grid-item">2</div>
+        </div>
 		<div id="header">
+            <a id="name" href="index.html">Tasty&amp;Fancy</a>
+			<a id="hamburger-button"href="#hamburger-button">
+				<div id="hamburger-top"></div>
+				<div id="hamburger-middle"></div>
+				<div id="hamburger-bottom"></div>
+			</a>
+            <a id="x-button"href="#">
+				<div id="line-1"></div>
+				<div id="line-2"></div>
+			</a>
+            <div id="header-menu">
+				<a class="header-button" href="meny.html">Meny</a>
+				<a class="header-button" href="index.html#nyheter">Nyheter</a>
+				<a class="header-button" href="index.html#tilbud">Tilbud</a>
+				<a class="header-button" href="index.html#kontakt">Kontakt oss</a>
+			</div>
+            <div id="banner">
+			<img src="pictures/pizza-banner.jpg">
+			<p>Fra fastfood til verdensklasse</p>
+		</div>
+		<div id="nyheter">
+            <p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
+			
+		</div>
+		<div id="tilbud">
+            <p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
+			
+		</div>
+		<div id="kontakt">
+            <p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
+			
+		</div>
+		<div id="footer">
+			<p>Telefon: XX XX XX XX</p>
+			<p>E-post: kontakt@tastyfancy.no</p>
+		</div>
 			
 		</div>
 		<div id="content">
