--- a/Project/menu.html
+++ b/Project/menu.html
@@ -32,20 +32,20 @@
            		<h1 id="title">Meny</h1>
             	<div class ="grid-container">
 					<div class ="grid-item">
-						<h2>Mat</h2>
+						<h2>Misosuppe</h2>
 						<p>Beskrivelse</p>
                		</div>
                		<div class ="grid-item">
-						<h2>Mat</h2>
+						<h2>Pizza</h2>
 						<p>Beskrivelse</p>
                		</div>
                		<div class ="grid-item">
-						<h2>Mat</h2>
+						<h2>Hamburger</h2>
 						<p>Beskrivelse</p>
                		</div>
                		<div class ="grid-item">
-						<h2>Mat</h2>
-						<p>Beskrivelse</p>
+						<h2>Teriyakilaks</h2>
+						<p>Stekt laks med wokede grønnsaker og nudler i teriyakisaus</p>
                		</div>
             	</div>
         	</div>
