Lots of changes

--- a/Project/index.html
+++ b/Project/index.html
@@ -23,32 +23,47 @@
 			</a>
 			<div id="header-menu">
 				<a class="header-button" href="menu.html">Meny</a>
-				<a class="header-button" href="index.html#nyheter">Nyheter</a>
-				<a class="header-button" href="index.html#tilbud">Tilbud</a>
-				<a class="header-button" href="index.html#kontakt">Kontakt oss</a>
+				<a class="header-button" href="index.html#new-items">Nyheter</a>
+				<a class="header-button" href="index.html#contact">Kontakt oss</a>
 			</div>
 		</div>
 		<div id="content">
 			<div id="banner">
 				<img src="pictures/pizza-banner.jpg">
 				<h1>Fra fastfood til verdensklasse</h1>
-            	<p> Alle dager: 10-22</p>
+            	<p> Alle dager 10-22</p>
 			</div>
 			<div id="new-items">
-            	<p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
-			
-			</div>
-			<div id="offers">
-            	<p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
-			
+				<h1 class="title">Nyheter!</h1>
+            	<div class ="grid-container">
+					<div class ="grid-item">
+						<div>
+							<h2>Misosuppe</h2>
+							<p>Tradisjonell kinesisk suppe av fiskekraft</p>
+						</div>
+						<p class="price">kr 40</p>
+               		</div>
+               		<div class ="grid-item">
+               			<div>
+							<h2>Pizza</h2>
+							<p>Pizza med rødløk, pepperoni, basilikum og 100% mozzarellaost</p>
+						</div>
+              			<p class="price">kr 120</p>
+               		</div>
+            	</div>
 			</div>
 			<div id="contact">
-            	<p>Lorem ipsum dolor sit amet, ne alii appetere adipiscing duo. Mea et placerat interpretaris, sit iudicabit euripidis in, pro quas latine virtute et. Ad malis persecuti consequuntur mea, ne errem volutpat sed, decore explicari elaboraret pro ei. His id augue equidem, an sea ullum doctus, viderer scripserit eum in.</p>
-			
+				<img src="pictures/miso-suppe-meny.jpg">
+				<div>
+					<h1>Tittel</h1>
+					<p>Åpningstider: Alle dager 10 - 22</p>
+					<p>Telefon: XX XX XX XX</p>
+				</div>
 			</div>
 			<div id="footer">
 				<p>Telefon: XX XX XX XX</p>
 				<p>E-post: kontakt@tastyfancy.no</p>
+				<p>Adresse: Veien 13</p>
 			</div>
 		</div>
 	</body>
