--- a/Project/index.html
+++ b/Project/index.html
@@ -23,8 +23,8 @@
 			</a>
 			<div id="header-menu">
 				<a class="header-button" href="menu.html">Meny</a>
-				<a class="header-button" href="index.html#new-items">Nyheter</a>
-				<a class="header-button" href="index.html#contact">Kontakt oss</a>
+				<a class="header-button" href="index.html#news">Nyheter</a>
+				<a class="header-button" href="index.html#order">Bestilling</a>
 			</div>
 		</div>
 		<div id="content">
@@ -33,37 +33,25 @@
 				<h1>Fra fastfood til verdensklasse</h1>
             	<p> Alle dager 10-22</p>
 			</div>
-			<div id="new-items">
-				<h1 class="title">Nyheter!</h1>
-            	<div class ="grid-container">
-					<div class ="grid-item">
-						<div>
-							<h2>Misosuppe</h2>
-							<p>Tradisjonell kinesisk suppe av fiskekraft</p>
-						</div>
-						<p class="price">kr 40</p>
-               		</div>
-               		<div class ="grid-item">
-               			<div>
-							<h2>Pizza</h2>
-							<p>Pizza med rødløk, pepperoni, basilikum og 100% mozzarellaost</p>
-						</div>
-              			<p class="price">kr 120</p>
-               		</div>
+			<div id="news">
+				<h1 class="title">Nyhet!</h1>
+            	<div id="veg">
+					<img src="pictures/burger-meny.jpg">
+					<p>Tasty&amp;Fancy goes vegan!</p>
+					<a href="menu.html">Meny</a>
             	</div>
 			</div>
-			<div id="contact">
+			<div id="order">
 				<img src="pictures/miso-suppe-meny.jpg">
-				<div>
-					<h1>Tittel</h1>
-					<p>Åpningstider: Alle dager 10 - 22</p>
-					<p>Telefon: XX XX XX XX</p>
-				</div>
+				<div></div>
+				<h1>Bestilling</h1>
+				<p>Åpningstider: Alle dager 10 - 22</p>
+				<p>Telefon: 66 77 88 99</p>
 			</div>
 			<div id="footer">
-				<p>Telefon: XX XX XX XX</p>
+				<p>Telefon: 66 77 88 99</p>
 				<p>E-post: kontakt@tastyfancy.no</p>
-				<p>Adresse: Veien 13</p>
+				<p>Adresse: Veien 13, 0554 Oslo</p>
 			</div>
 		</div>
 	</body>
