Changed the design
Menu has been split up into multiple pages containing categories of different food.

--- a/Project/index.html
+++ b/Project/index.html
@@ -22,8 +22,8 @@
 				<div id="line-2"></div>
 			</a>
 			<div id="header-menu">
-				<a class="header-button" href="menu.html">Meny</a>
 				<a class="header-button" href="index.html#news">Nyheter</a>
+				<a class="header-button" href="index.html#bestsellers">Bestselgere</a>
 				<a class="header-button" href="index.html#order">Bestilling</a>
 			</div>
 		</div>
@@ -32,6 +32,13 @@
 				<img src="pictures/pizza-banner.jpg">
 				<h1>Fra fastfood til verdensklasse</h1>
             	<p> Alle dager 10-22</p>
+				<div id="menus">
+					<a href="pizza.html">Pizza</a>
+					<a href="hamburger.html">Hamburger</a>
+					<a href="seafood.html">Sjømat</a>
+					<a href="dessert.html">Dessert</a>
+					<a href="drinks.html">Drikke</a>
+				</div>
 			</div>
 			<div id="news">
 				<h1 class="title">Nyhet!</h1>
