Added a "bestselling"-section
Co-Authored-By: Henrik <mcflyboy@users.noreply.github.com>

--- a/Project/index.html
+++ b/Project/index.html
@@ -48,6 +48,19 @@
 					<a href="menu.html">Meny</a>
             	</div>
 			</div>
+			<div id="bestsellers">
+				<h1 class="title">Prøv våre bestselgere!</h1>
+            	<div class ="grid-container">
+					<p class ="grid-item">Pizza</p>
+					<a class ="grid-item" href="pizza.html">Se mer</a>
+					<p class ="grid-item">Hamburger</p>
+					<a class ="grid-item" href="hamburger.html">Se mer</a>
+					<p class ="grid-item">Sjømat</p>
+					<a class ="grid-item" href="seafood.html">Se mer</a>
+           			<p class ="grid-item">Dessert</p>
+					<a class ="grid-item" href="dessert.html">Se mer</a>
+            	</div>
+			</div>
 			<div id="order">
 				<img src="pictures/miso-suppe-meny.jpg">
 				<div></div>
