Main page is done
Many changes to the menu-pages

Co-Authored-By: Henrik <mcflyboy@users.noreply.github.com>

--- a/Project/dessert.html
+++ b/Project/dessert.html
@@ -23,90 +23,53 @@
 			</a>
             <div id="header-menu">
 				<a class="header-button" href="index.html#news">Nyheter</a>
-				<a class="header-button" href="index.html#bestsellers">Bestselgere</a>
 				<a class="header-button" href="index.html#contact">Kontakt oss</a>
 			</div>
 		</div>
 		<div id="content">
+       		<div id="menus">
+				<a href="pizza.html">Pizza</a>
+				<a href="hamburger.html">Hamburger</a>
+				<a href="dessert.html">Dessert</a>
+				<a href="drinks.html">Drikke</a>
+			</div>
         	<div class="menu" id="end">
            		<h1 class="title">Dessert</h1>
             	<div class ="grid-container">
 					<div class ="grid-item">
 						<div>
-							<h2>Misosuppe</h2>
-							<p>Tradisjonell kinesisk suppe av fiskekraft</p>
+							<h2>Brownie</h2>
+							<p>Varm brownie toppet med vaniljeis, nøtter, sjokolade-og karamellsaus</p>
 						</div>
-						<p class="price">kr 40</p>
+						<p class="price">kr 79</p>
                		</div>
                		<div class ="grid-item">
                			<div>
-							<h2>Pizza</h2>
-							<p>Pizza med rødløk, pepperoni, basilikum og 100% mozzarellaost</p>
+							<h2>Oreo madness (bestselger!)</h2>
+							<p>To store Oreo cookies servert med vaniljeis og varm sjokolade-og karamellsaus</p>
 						</div>
-              			<p class="price">kr 120</p>
+              			<p class="price">kr 69</p>
                		</div>
                		<div class ="grid-item">
 						<div>
-							<h2>Hamburger</h2>
-							<p>Saftig hamburger består av 100% rent norsk storfekjøtt, tomat, fersk løk, cheddarost og majones</p>
+							<h2>Ostekake</h2>
+							<p>Kremet ostekake servert med jordbær</p>
 						</div>
               			<p class="price">kr 110</p>
                		</div>
                		<div class ="grid-item">
 						<div>
-							<h2>Teriyakilaks</h2>
-							<p>Stekt laks med wokede grønnsaker og nudler i teriyakisaus</p>
+							<h2>Sundae</h2>
+							<p>Vaniljeis med nøtter, krem, sjokolade-og karamellsaus</p>
 						</div>
-              			<p class="price">kr 150</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Pasta</h2>
-							<p>Med en kremet marinarasaus og rucculasalat</p>
-						</div>
-              			<p class="price">kr 160</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Cæsar salat</h2>
-							<p>Med kyllingbrystfilèt, brødkrutonger og parmesanost</p>
-						</div>
-              			<p class="price">kr 155</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Misosuppe</h2>
-							<p>Tradisjonell kinesisk suppe av fiskekraft</p>
-						</div>
-						<p class="price">kr 40</p>
-               		</div>
-               		<div class ="grid-item">
-               			<div>
-							<h2>Pizza</h2>
-							<p>Pizza med rødløk, pepperoni, basilikum og 100% mozzarellaost</p>
-						</div>
-              			<p class="price">kr 120</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Hamburger</h2>
-							<p>Saftig hamburger består av 100% rent norsk storfekjøtt, tomat, fersk løk, cheddarost og majones</p>
-						</div>
-              			<p class="price">kr 110</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Teriyakilaks</h2>
-							<p>Stekt laks med wokede grønnsaker og nudler i teriyakisaus</p>
-						</div>
-              			<p class="price">kr 150</p>
+              			<p class="price">kr 89</p>
                		</div>
             	</div>
         	</div>
 			<div id="footer">
-				<p>Telefon: XX XX XX XX</p>
+				<p>Telefon: 66 77 88 99</p>
 				<p>E-post: kontakt@tastyfancy.no</p>
-				<p>Adresse: Veien 13</p>
+				<p>Adresse: Veien 13, 0554 Oslo</p>
 			</div>
 		</div>
 	</body>
