--- a/Project/hamburger.html
+++ b/Project/hamburger.html
@@ -23,90 +23,67 @@
 			</a>
             <div id="header-menu">
 				<a class="header-button" href="index.html#news">Nyheter</a>
-				<a class="header-button" href="index.html#bestsellers">Bestselgere</a>
 				<a class="header-button" href="index.html#contact">Kontakt oss</a>
 			</div>
 		</div>
 		<div id="content">
+       		<div id="menus">
+				<a href="pizza.html">Pizza</a>
+				<a href="hamburger.html">Hamburger</a>
+				<a href="dessert.html">Dessert</a>
+				<a href="drinks.html">Drikke</a>
+			</div>
         	<div class="menu" id="end">
            		<h1 class="title">Hamburger</h1>
             	<div class ="grid-container">
 					<div class ="grid-item">
 						<div>
-							<h2>Misosuppe</h2>
-							<p>Tradisjonell kinesisk suppe av fiskekraft</p>
+							<h2 class="vegetarian">Klassikeren</h2>
+							<p>Tomat, rødløk, salat og majones</p>
 						</div>
-						<p class="price">kr 40</p>
+						<p class="price">kr 139</p>
                		</div>
                		<div class ="grid-item">
                			<div>
-							<h2>Pizza</h2>
-							<p>Pizza med rødløk, pepperoni, basilikum og 100% mozzarellaost</p>
+							<h2 class="best">Cheddar og Bacon</h2>
+							<p>Burger med engelsk cheddar,bacon, tomat, rødløk, salat og majones </p>
 						</div>
-              			<p class="price">kr 120</p>
+              			<p class="price">kr 149</p>
                		</div>
                		<div class ="grid-item">
 						<div>
-							<h2>Hamburger</h2>
-							<p>Saftig hamburger består av 100% rent norsk storfekjøtt, tomat, fersk løk, cheddarost og majones</p>
+							<h2>Homestyle Spicy Beef</h2>
+							<p>Saftig hamburger består av 100% rent norsk storfekjøtt, jalapeno, bacon, cheddarost, rødløk</p>
 						</div>
-              			<p class="price">kr 110</p>
+              			<p class="price">kr 166</p>
                		</div>
                		<div class ="grid-item">
 						<div>
-							<h2>Teriyakilaks</h2>
-							<p>Stekt laks med wokede grønnsaker og nudler i teriyakisaus</p>
+							<h2>Blåmandag</h2>
+							<p>Blåmuggost, baconbiter, grillet og røkt syltet rødløk og salat</p>
 						</div>
-              			<p class="price">kr 150</p>
+              			<p class="price">kr 159</p>
                		</div>
                		<div class ="grid-item">
 						<div>
-							<h2>Pasta</h2>
-							<p>Med en kremet marinarasaus og rucculasalat</p>
+							<h2 class="vegetarian">Veggie</h2>
+							<p>Burger av røkt aubergine, paprika, bønner, portobellosopp og hvitløk og parmesanost</p>
 						</div>
-              			<p class="price">kr 160</p>
+              			<p class="price">kr 149</p>
                		</div>
                		<div class ="grid-item">
 						<div>
-							<h2>Cæsar salat</h2>
-							<p>Med kyllingbrystfilèt, brødkrutonger og parmesanost</p>
+							<h2>BBQ</h2>
+							<p>Coleslaw &amp; barbeque saus</p>
 						</div>
-              			<p class="price">kr 155</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Misosuppe</h2>
-							<p>Tradisjonell kinesisk suppe av fiskekraft</p>
-						</div>
-						<p class="price">kr 40</p>
-               		</div>
-               		<div class ="grid-item">
-               			<div>
-							<h2>Pizza</h2>
-							<p>Pizza med rødløk, pepperoni, basilikum og 100% mozzarellaost</p>
-						</div>
-              			<p class="price">kr 120</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Hamburger</h2>
-							<p>Saftig hamburger består av 100% rent norsk storfekjøtt, tomat, fersk løk, cheddarost og majones</p>
-						</div>
-              			<p class="price">kr 110</p>
-               		</div>
-               		<div class ="grid-item">
-						<div>
-							<h2>Teriyakilaks</h2>
-							<p>Stekt laks med wokede grønnsaker og nudler i teriyakisaus</p>
-						</div>
-              			<p class="price">kr 150</p>
-               		</div>
+              			<p class="price">kr 129</p>
+					</div>
             	</div>
         	</div>
 			<div id="footer">
-				<p>Telefon: XX XX XX XX</p>
+				<p>Telefon: 66 77 88 99</p>
 				<p>E-post: kontakt@tastyfancy.no</p>
-				<p>Adresse: Veien 13</p>
+				<p>Adresse: Veien 13, 0554 Oslo</p>
 			</div>
 		</div>
 	</body>
