--- a/Project/index.html
+++ b/Project/index.html
@@ -23,7 +23,6 @@
 			</a>
 			<div id="header-menu">
 				<a class="header-button" href="index.html#news">Nyheter</a>
-				<a class="header-button" href="index.html#bestsellers">Bestselgere</a>
 				<a class="header-button" href="index.html#order">Bestilling</a>
 			</div>
 		</div>
@@ -35,7 +34,6 @@
 				<div id="menus">
 					<a href="pizza.html">Pizza</a>
 					<a href="hamburger.html">Hamburger</a>
-					<a href="seafood.html">Sjømat</a>
 					<a href="dessert.html">Dessert</a>
 					<a href="drinks.html">Drikke</a>
 				</div>
@@ -43,30 +41,17 @@
 			<div id="news">
 				<h1 class="title">Nyhet!</h1>
             	<div id="veg">
-					<img src="pictures/burger-meny.jpg">
-					<p>Tasty&amp;Fancy goes vegan!</p>
-					<a href="menu.html">Meny</a>
-            	</div>
-			</div>
-			<div id="bestsellers">
-				<h1 class="title">Prøv våre bestselgere!</h1>
-            	<div class ="grid-container">
-					<p class ="grid-item">Pizza</p>
-					<a class ="grid-item" href="pizza.html">Se mer</a>
-					<p class ="grid-item">Hamburger</p>
-					<a class ="grid-item" href="hamburger.html">Se mer</a>
-					<p class ="grid-item">Sjømat</p>
-					<a class ="grid-item" href="seafood.html">Se mer</a>
-           			<p class ="grid-item">Dessert</p>
-					<a class ="grid-item" href="dessert.html">Se mer</a>
+					<img src="pictures/veg-pizza.jpg">
+					<h1>Tasty&amp;Fancy goes vegetarian!</h1>
+					<p>Se etter det i menyene våres!</p>
             	</div>
 			</div>
 			<div id="order">
-				<img src="pictures/miso-suppe-meny.jpg">
+				<img src="pictures/hamburger2.jpg">
 				<div></div>
 				<h1>Bestilling</h1>
-				<p>Åpningstider: Alle dager 10 - 22</p>
-				<p>Telefon: 66 77 88 99</p>
+				<p>Åpningstider:<br>Alle dager 10 - 22</p>
+				<p>Telefon:<br>66 77 88 99</p>
 			</div>
 			<div id="footer">
 				<p>Telefon: 66 77 88 99</p>
