--- a/Project/index.html
+++ b/Project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nb-NO">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,54 +10,80 @@
 		<title>Tasty&amp;Fancy</title>
 	</head>
 	<body>
-		<div id="header">
-			<a id="name" href="index.html">Tasty&amp;Fancy</a>
-			<a id="hamburger-button"href="#hamburger-button">
+		
+		<!-- The header section -->
+		<header>
+			<!-- Clickable title that takes the user to the top of the page -->
+			<a id="name" href="#banner">Tasty&amp;Fancy</a>
+			<!-- The hamburger-button is only visible when the viewport's width is less than 850px -->
+			<a id="hamburger-button" href="#hamburger-button">
 				<div id="hamburger-top"></div>
 				<div id="hamburger-middle"></div>
 				<div id="hamburger-bottom"></div>
 			</a>
+			
+			<!-- Only visible after clicking the hamburger-button -->
 			<a id="x-button" href="">
 				<div id="line-1"></div>
 				<div id="line-2"></div>
 			</a>
-			<div id="header-menu">
+			
+			<!-- The navigation-menu of the header -->
+			<nav id="header-menu">
 				<a class="header-button" href="index.html#news">Nyheter</a>
 				<a class="header-button" href="index.html#order">Bestilling</a>
-			</div>
-		</div>
-		<div id="content">
-			<div id="banner">
-				<img src="pictures/pizza-banner.jpg">
+			</nav>
+		</header>
+		
+		<!-- Page content starts here -->
+		
+		<main id="content">
+			
+			<!-- Banner is in the size of the viewport -->
+			<section id="banner">
+				<img src="pictures/pizza-banner.jpg" alt="Pizza-bakgrunn">
 				<h1>Fra fastfood til verdensklasse</h1>
             	<p> Alle dager 10-22</p>
-				<div id="menus">
+				
+				<!-- Navigation menu to menu-pages -->
+				<nav id="menus">
 					<a href="pizza.html">Pizza</a>
 					<a href="hamburger.html">Hamburger</a>
 					<a href="dessert.html">Dessert</a>
 					<a href="drinks.html">Drikke</a>
-				</div>
-			</div>
-			<div id="news">
+				</nav>
+			</section>
+			
+			<!-- Section where news are shown -->
+			<section id="news">
 				<h1 class="title">Nyhet!</h1>
-            	<div id="veg">
-					<img src="pictures/veg-pizza.jpg">
+				<!-- News article -->
+            	<article id="veg">
+					<img src="pictures/veg-pizza.jpg" alt="Vegetar-pizza">
 					<h1>Tasty&amp;Fancy goes vegetarian!</h1>
 					<p>Se etter det i menyene våres!</p>
-            	</div>
-			</div>
-			<div id="order">
-				<img src="pictures/hamburger2.jpg">
+            	</article>
+			</section>
+			
+			<!-- Section that tells the user how to contact and order -->
+			<section id="order">
+				<img src="pictures/hamburger.jpg" alt="Hamburger-bakgrunn">
+				
+				<!-- Frame around the text -->
 				<div></div>
 				<h1>Bestilling</h1>
 				<p>Åpningstider:<br>Alle dager 10 - 22</p>
 				<p>Telefon:<br>66 77 88 99</p>
-			</div>
-			<div id="footer">
+			</section>
+			
+			<!-- Page content ends here -->
+			
+			<!-- The footer with contact-info -->
+			<section id="footer">
 				<p>Telefon: 66 77 88 99</p>
 				<p>E-post: kontakt@tastyfancy.no</p>
 				<p>Adresse: Veien 13, 0554 Oslo</p>
-			</div>
-		</div>
+			</section>
+		</main>
 	</body>
 </html>
